fix: enable some copy paste functionality

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -93,15 +93,15 @@ bind-key -T copy-mode-vi 'C-\' select-pane -l
 #
 # Plugins configurations
 set -g @emulate-scroll-for-no-mouse-alternate-buffer 'on'
-# set -g @now-playing-scrollable-threshold 60
-# set -g @now-playing-status-format "#[fg=cyan,nobold]#[fg=blue] #[fg=white]{artist} #[fg=cyan]ﱘ #[fg=white]{title}"
+
+# Some special clipboard yank/copy configs
+set -g @yank_action 'copy-pipe-no-clear'
 
 # Plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'nhdaly/tmux-better-mouse-mode'
-
-# set -g @plugin 'spywhere/tmux-now-playing'
+set -g @plugin 'tmux-plugins/tmux-yank'
 
 # Plugins Initialization (end of file)
 run '~/.tmux/plugins/tpm/tpm'
