fix: remove hostname from tmux config

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -141,7 +141,7 @@ run '~/.tmux/plugins/tpm/tpm'
 # set -g status-left-style NONE
 # set -g status-right-style NONE
 # set -g status-left "#[fg=#a89984,nobold] #S "
-# set -g status-right "#[fg=#131a24,nobold,nounderscore,noitalics]#[fg=#a89984] #{prefix_highlight} #[fg=#a89984,nobold,nounderscore,noitalics] #[fg=#a89984] %Y-%m-%d %I:%M %p #[fg=#a89984,nobold,nounderscore,noitalics]#[fg=#a89984] #h "
+# set -g status-right "#[fg=#131a24,nobold,nounderscore,noitalics]#[fg=#a89984] #{prefix_highlight} #[fg=#a89984,nobold,nounderscore,noitalics] #[fg=#a89984] %Y-%m-%d %I:%M %p "
 # setw -g window-status-activity-style "underscore,fg=#83a598"
 # setw -g window-status-separator ""
 # setw -g window-status-style "NONE,fg=#a89984"
