feat: add gruvbox color scheme to alacritty

--- a/alacritty/.config/alacritty/alacritty.toml
+++ b/alacritty/.config/alacritty/alacritty.toml
@@ -1,4 +1,7 @@
-import = ["~/.config/alacritty/kanagawa-wave.toml"]
+import = [
+  # "~/.config/alacritty/gruvbox-hard-dark.toml",
+  "~/.config/alacritty/kanagawa-wave.toml",
+]
 live_config_reload = true
 
 [font]
