fix: remove hostname from tmux panel

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -162,7 +162,7 @@ set -g status-right-length "100"
 set -g status-left-style NONE
 set -g status-right-style NONE
 set -g status-left "#[fg=#727169,nobold] #S "
-set -g status-right "#[fg=#131a24,nobold,nounderscore,noitalics]#[fg=#727169] #{prefix_highlight} #[fg=#727169,nobold,nounderscore,noitalics] #[fg=#727169] %Y-%m-%d %I:%M %p #[fg=#727169,nobold,nounderscore,noitalics]#[fg=#727169] #h "
+set -g status-right "#[fg=#131a24,nobold,nounderscore,noitalics]#[fg=#727169] #{prefix_highlight} #[fg=#727169,nobold,nounderscore,noitalics] #[fg=#727169] %Y-%m-%d %I:%M %p "
 setw -g window-status-activity-style "underscore,fg=#6a9589"
 setw -g window-status-separator ""
 setw -g window-status-style "NONE,fg=#727169"
