--- a/fontconfig/.config/fontconfig/fonts.conf
+++ b/fontconfig/.config/fontconfig/fonts.conf
@@ -19,6 +19,7 @@
   <alias>
     <family>monospace</family>
     <prefer>
+      <family>LiterationMono Nerd Font</family>
       <family>SauceCodePro Nerd Font Mono</family>
     </prefer>
   </alias>
