fix: enable blinking cursor in tmux for kitty

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,6 +1,6 @@
 set-option -g detach-on-destroy off
 set-option -g default-terminal "tmux-256color"
-set-option -sa terminal-overrides ',xterm-256color:RGB'
+set-option -sa terminal-overrides ',xterm-256color:RGB,xterm-kitty:cnorm=\E[?12h\E[?25h'
 
 # base settings
 set -g base-index 1
