--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,7 +1,8 @@
 #single_window_padding_width 0 0 5 0
+font_family      Source Code Pro
 hide_window_decorations yes
 modify_font cell_height 125%
-font_size 12
+font_size 9.5
 
 
 # Base16 Gruvbox dark, hard - kitty color config
