--- a/fontconfig/.config/fontconfig/fonts.conf
+++ b/fontconfig/.config/fontconfig/fonts.conf
@@ -2,23 +2,25 @@
 <!DOCTYPE fontconfig SYSTEM "urn:fontconfig:fonts.dtd">
 <fontconfig>
   <!-- Fallback fonts preference order -->
-  <alias>
-    <family>sans-serif</family>
-    <prefer>
-      <family>Noto Sans</family>
-      <family>Noto Sans Arabic</family>
-    </prefer>
-  </alias>
-  <alias>
-    <family>serif</family>
-    <prefer>
-      <family>Noto Serif</family>
-      <family>Noto Sans Arabic</family>
-    </prefer>
-  </alias>
+  <!-- <alias> -->
+  <!--   <family>sans-serif</family> -->
+  <!--   <prefer> -->
+  <!--     <family>Noto Sans</family> -->
+  <!--     <family>Noto Sans Arabic</family> -->
+  <!--   </prefer> -->
+  <!-- </alias> -->
+  <!-- <alias> -->
+  <!--   <family>serif</family> -->
+  <!--   <prefer> -->
+  <!--     <family>Noto Serif</family> -->
+  <!--     <family>Noto Sans Arabic</family> -->
+  <!--   </prefer> -->
+  <!-- </alias> -->
   <alias>
     <family>monospace</family>
     <prefer>
+      <family>NotoSansM Nerd Font Mono</family>
+      <family>UbuntuMono Nerd Font Mono</family>
       <family>LiterationMono Nerd Font</family>
       <family>SauceCodePro Nerd Font Mono</family>
     </prefer>
