--- a/fontconfig/.config/fontconfig/fonts.conf
+++ b/fontconfig/.config/fontconfig/fonts.conf
@@ -1,21 +1,21 @@
 <?xml version="1.0"?>
 <!DOCTYPE fontconfig SYSTEM "urn:fontconfig:fonts.dtd">
 <fontconfig>
-  <!-- Fallback fonts preference order -->
-  <!-- <alias> -->
-  <!--   <family>sans-serif</family> -->
-  <!--   <prefer> -->
-  <!--     <family>Noto Sans</family> -->
-  <!--     <family>Noto Sans Arabic</family> -->
-  <!--   </prefer> -->
-  <!-- </alias> -->
-  <!-- <alias> -->
-  <!--   <family>serif</family> -->
-  <!--   <prefer> -->
-  <!--     <family>Noto Serif</family> -->
-  <!--     <family>Noto Sans Arabic</family> -->
-  <!--   </prefer> -->
-  <!-- </alias> -->
+  Fallback fonts preference order
+  <alias>
+    <family>sans-serif</family>
+    <prefer>
+      <family>Noto Sans</family>
+      <family>Noto Sans Arabic</family>
+    </prefer>
+  </alias>
+  <alias>
+    <family>serif</family>
+    <prefer>
+      <family>Noto Serif</family>
+      <family>Noto Sans Arabic</family>
+    </prefer>
+  </alias>
   <alias>
     <family>monospace</family>
     <prefer>
