--- a/alacritty/.config/alacritty/alacritty.toml
+++ b/alacritty/.config/alacritty/alacritty.toml
@@ -1,10 +1,3 @@
-import = [
-  "~/.config/alacritty/nightfly.toml",
-  #"~/.config/alacritty/gruvbox-hard-dark.toml",
-  # "~/.config/alacritty/gruvbox-hard-light.toml",
-  # "~/.config/alacritty/kanagawa-wave.toml",
-]
-live_config_reload = true
 
 [font]
 size = 12 
@@ -33,3 +26,12 @@ y = 0
 [window.padding]
 x = 5
 y = 5
+
+[general]
+live_config_reload = true
+import = [
+  # "~/.config/alacritty/nightfly.toml",
+  "~/.config/alacritty/gruvbox-hard-dark.toml",
+  # "~/.config/alacritty/gruvbox-hard-light.toml",
+  # "~/.config/alacritty/kanagawa-wave.toml",
+]
