--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -38,7 +38,7 @@ bind C-l resize-pane -R 5
 bind C-n next-window
 bind C-p previous-window
 bind g new-window -c "#{pane_current_path}" -n "lazygit" lazygit
-bind i new-session -A -s "Notes" -c "~/notes"
+bind i new-session -A -s "Notes" -c "~/notes" nvim index.md
 bind f new-window -n "tmux-sesionizer" tmux-sessionizer
 bind K new-window -c "#{pane_current_path}" -n "lazydocker" lazydocker
 bind h select-pane -L
