--- a/alacritty/.config/alacritty/alacritty.toml
+++ b/alacritty/.config/alacritty/alacritty.toml
@@ -1,19 +1,19 @@
 
 [font]
-size = 12 
+size = 13
 
 [font.bold]
-family = "monospace"
+family = "MesloLGLDZ Nerd Font Mono"
 
 [font.glyph_offset]
 x = 0
 y = 0
 
 [font.italic]
-family = "monospace"
+family = "MesloLGLDZ Nerd Font Mono"
 
 [font.normal]
-family = "monospace"
+family = "MesloLGLDZ Nerd Font Mono"
 
 [font.offset]
 x = 0
