feat: add a few ssh hosts

--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -2,5 +2,17 @@ Host wa
 	Hostname webdev-sunnybyte.wildlifeacoustics.com
 	User sunnybyte
 
+Host alecu-prod
+	HostName 3.137.35.21
+	User ubuntu
+	IdentityFile ~/.ssh/clients/alec.pem
+	IdentitiesOnly yes
+	
+Host alecu-staging
+	HostName 3.12.184.152
+	User ubuntu
+	IdentityFile ~/.ssh/clients/alec.pem
+	IdentitiesOnly yes
+
 Host *
 	IdentityAgent "~/Library/Group Containers/2BUA8C4S2C.com.1password/t/agent.sock"
