feat: switch to adwaita mono nerd font as default monospace

--- a/fontconfig/.config/fontconfig/fonts.conf
+++ b/fontconfig/.config/fontconfig/fonts.conf
@@ -19,6 +19,7 @@
   <alias>
     <family>monospace</family>
     <prefer>
+      <family>AdwaitaMono Nerd Font</family>
       <family>NotoSansM Nerd Font Mono</family>
       <family>UbuntuMono Nerd Font Mono</family>
       <family>LiterationMono Nerd Font</family>
