--- a/alacritty/.config/alacritty/alacritty.toml
+++ b/alacritty/.config/alacritty/alacritty.toml
@@ -3,17 +3,17 @@
 size = 13
 
 [font.bold]
-family = "MesloLGLDZ Nerd Font Mono"
+family = "monospace"
 
 [font.glyph_offset]
 x = 0
 y = 0
 
 [font.italic]
-family = "MesloLGLDZ Nerd Font Mono"
+family = "monospace"
 
 [font.normal]
-family = "MesloLGLDZ Nerd Font Mono"
+family = "monospace"
 
 [font.offset]
 x = 0
