--- a/alacritty/.config/alacritty/alacritty.toml
+++ b/alacritty/.config/alacritty/alacritty.toml
@@ -1,6 +1,14 @@
+[font.bold]
+family = "MesloLGL Nerd Font Mono"
+
+[font.italic]
+family = "MesloLGL Nerd Font Mono"
+
+[font.normal]
+family = "MesloLGL Nerd Font Mono"
 
 [font]
-size = 13
+size = 15
 
 [font.glyph_offset]
 x = 0
@@ -10,10 +18,6 @@ y = 10
 x = 0
 y = 20
 
-# [window]
-# decorations = "none"
-# opacity = 1.0
-
 [window.padding]
 x = 5
 y = 5
@@ -21,8 +25,6 @@ y = 5
 [general]
 live_config_reload = true
 import = [
-  "~/.config/alacritty/fonts-linux.toml",
-  "~/.config/alacritty/fonts-macos.toml",
   # "~/.config/alacritty/nightfly.toml",
   "~/.config/alacritty/gruvbox-hard-dark.toml",
   # "~/.config/alacritty/gruvbox-hard-light.toml",
