--- a/alacritty/.config/alacritty/alacritty-linux.toml
+++ b/alacritty/.config/alacritty/alacritty-linux.toml
@@ -1,13 +1,13 @@
 [font]
-size = 13
+size = 11
 
 [font.glyph_offset]
 x = 0
-y = 0 
+y = 5 
 
 [font.offset]
 x = 0
-y = 0
+y = 10 
 
 [font.bold]
 family = "monospace"
@@ -31,5 +31,7 @@ live_config_reload = true
 import = [
   "~/.config/alacritty/gruvbox-hard-dark.toml",
   # "~/.config/alacritty/gruvbox-hard-light.toml",
+  # "~/.config/alacritty/catppuccin-latte.toml",
+  # "~/.config/alacritty/catppuccin-mocha.toml",
 ]
 
