fix: use manual settings for redshift dawn/dusk

--- a/redshift/.config/redshift/redshift.conf
+++ b/redshift/.config/redshift/redshift.conf
@@ -1,9 +1,12 @@
 [redshift]
 temp-day=6500
-temp-night=4800
+temp-night=5600
 fade=0
 location-provider=manual
 
-[manual]
-lat=43.255203
-lon=-79.843826
+dawn-time=4:01-4:02
+dusk-time=4:03-4:04
+
+;[manual]
+;lat=43.255203
+;lon=-79.843826
