feat: add wayland screenshot tool

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -241,8 +241,8 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, space, exec, $terminal
 bind = $mainMod SHIFT, C, killactive,
-bind = $mainMod, M, exit,
-bind = $mainMod, E, exec, $fileManager
+bind = $mainMod SHIFT, M, exit,
+bind = $mainMod SHIFT, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, P, exec, $menu
 bind = $mainMod SHIFT, X, exec, $powerMenu
@@ -306,6 +306,7 @@ bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
 # Laptop multimedia keys for volume and LCD brightness
+bindel = ,Print, exec, grim -g "$(slurp)" -t ppm - | satty --filename - --output-filename ~/Pictures/Screenshots/satty-$(date '+%Y%m%d-%H:%M:%S').png
 bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+
 bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
 bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
@@ -330,6 +331,10 @@ bindl = , XF86AudioPrev, exec, playerctl previous
 # windowrule = float,class:^(kitty)$,title:^(kitty)$
 windowrule = float,class:^(org.pulseaudio.pavucontrol)$
 windowrule = float,class:^(1Password)$
+
+windowrule = float,class:^(com.gabm.satty)$,title:^(satty)$
+windowrule = size 800 800,class:^(com.gabm.satty)$
+windowrule = move 0 0,class:^(com.gabm.satty)$
 
 # Ignore maximize requests from apps. You'll probably like this.
 windowrule = suppressevent maximize, class:.*
