--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -127,26 +127,26 @@ run '~/.tmux/plugins/tpm/tpm'
 # setw -g window-status-format "#[default][#I #F #W] "
 # setw -g window-status-current-format "#[fg=#f38ba8,bold][#I #F #W] "
 
-# # Gruvbox colors for Tmux
-# set -g mode-style "fg=#83a598,bg=#ebdbb2"
-# set -g message-style "fg=#83a598,bg=#ebdbb2"
-# set -g message-command-style "fg=#83a598,bg=#ebdbb2"
-# set -g pane-border-style "fg=#ebdbb2"
-# set -g pane-active-border-style "fg=#cc241d"
-# set -g status "on"
-# set -g status-justify "left"
-# set -g status-style "fg=#a89984"
-# set -g status-left-length "100"
-# set -g status-right-length "100"
-# set -g status-left-style NONE
-# set -g status-right-style NONE
-# set -g status-left "#[fg=#a89984,nobold] #S "
-# set -g status-right "#[fg=#131a24,nobold,nounderscore,noitalics]#[fg=#a89984] #{prefix_highlight} #[fg=#a89984,nobold,nounderscore,noitalics] #[fg=#a89984] %Y-%m-%d %I:%M %p "
-# setw -g window-status-activity-style "underscore,fg=#83a598"
-# setw -g window-status-separator ""
-# setw -g window-status-style "NONE,fg=#a89984"
-# setw -g window-status-format "#[default][#I #F #W] "
-# setw -g window-status-current-format "#[fg=#fe8019][#I #F #W] "
+# Gruvbox colors for Tmux
+set -g mode-style "fg=#83a598,bg=#ebdbb2"
+set -g message-style "fg=#83a598,bg=#ebdbb2"
+set -g message-command-style "fg=#83a598,bg=#ebdbb2"
+set -g pane-border-style "fg=#ebdbb2"
+set -g pane-active-border-style "fg=#cc241d"
+set -g status "on"
+set -g status-justify "left"
+set -g status-style "fg=#a89984"
+set -g status-left-length "100"
+set -g status-right-length "100"
+set -g status-left-style NONE
+set -g status-right-style NONE
+set -g status-left "#[fg=#a89984,nobold] #S "
+set -g status-right "#[fg=#131a24,nobold,nounderscore,noitalics]#[fg=#a89984] #{prefix_highlight} #[fg=#a89984,nobold,nounderscore,noitalics] #[fg=#a89984] %Y-%m-%d %I:%M %p "
+setw -g window-status-activity-style "underscore,fg=#83a598"
+setw -g window-status-separator ""
+setw -g window-status-style "NONE,fg=#a89984"
+setw -g window-status-format "#[default][#I #F #W] "
+setw -g window-status-current-format "#[fg=#ea6962][#I #F #W] "
 
 # # Kanagawa colors for Tmux
 # set -g mode-style "fg=#6a9589,bg=#c0a36e"
@@ -169,26 +169,26 @@ run '~/.tmux/plugins/tpm/tpm'
 # setw -g window-status-format "#[default][#I #F #W] "
 # setw -g window-status-current-format "#[fg=#ff5d62][#I #F #W] "
 
-# Nightfly colors for Tmux
-set -g mode-style "fg=#1d3b53,bg=#e3d18a"
-set -g message-style "fg=#1d3b53,bg=#e3d18a"
-set -g message-command-style "fg=#1d3b53,bg=#e3d18a"
-set -g pane-border-style "fg=#e3d18a"
-set -g pane-active-border-style "fg=#fc514e"
-set -g status "on"
-set -g status-justify "left"
-set -g status-style "fg=#9ca1aa"
-set -g status-left-length "100"
-set -g status-right-length "100"
-set -g status-left-style NONE
-set -g status-right-style NONE
-set -g status-left "#[fg=#9ca1aa,nobold] #S "
-set -g status-right "#[fg=#131a24,nobold,nounderscore,noitalics]#[fg=#9ca1aa] #{prefix_highlight} #[fg=#bdc1c6,nobold,nounderscore,noitalics] #[fg=#bdc1c6] %Y-%m-%d %I:%M %p #[fg=#bdc1c6,nobold,nounderscore,noitalics]#[fg=#bdc1c6] #h "
-setw -g window-status-activity-style "underscore,fg=#1d3b53"
-setw -g window-status-separator ""
-setw -g window-status-style "NONE,fg=#9ca1aa"
-setw -g window-status-format "#[default][#I #F #W] "
-setw -g window-status-current-format "#[fg=#fc514e][#I #F #W] "
+# # Nightfly colors for Tmux
+# set -g mode-style "fg=#1d3b53,bg=#e3d18a"
+# set -g message-style "fg=#1d3b53,bg=#e3d18a"
+# set -g message-command-style "fg=#1d3b53,bg=#e3d18a"
+# set -g pane-border-style "fg=#e3d18a"
+# set -g pane-active-border-style "fg=#fc514e"
+# set -g status "on"
+# set -g status-justify "left"
+# set -g status-style "fg=#9ca1aa"
+# set -g status-left-length "100"
+# set -g status-right-length "100"
+# set -g status-left-style NONE
+# set -g status-right-style NONE
+# set -g status-left "#[fg=#9ca1aa,nobold] #S "
+# set -g status-right "#[fg=#131a24,nobold,nounderscore,noitalics]#[fg=#9ca1aa] #{prefix_highlight} #[fg=#bdc1c6,nobold,nounderscore,noitalics] #[fg=#bdc1c6] %Y-%m-%d %I:%M %p #[fg=#bdc1c6,nobold,nounderscore,noitalics]#[fg=#bdc1c6] #h "
+# setw -g window-status-activity-style "underscore,fg=#1d3b53"
+# setw -g window-status-separator ""
+# setw -g window-status-style "NONE,fg=#9ca1aa"
+# setw -g window-status-format "#[default][#I #F #W] "
+# setw -g window-status-current-format "#[fg=#fc514e][#I #F #W] "
 
 # #!/usr/bin/env bash
 # # Nightfox colors for Tmux
