--- a/alacritty/.config/alacritty/alacritty-linux.toml
+++ b/alacritty/.config/alacritty/alacritty-linux.toml
@@ -29,7 +29,9 @@ y = 5
 [general]
 live_config_reload = true
 import = [
-  "~/.config/alacritty/gruvbox-hard-dark.toml",
+  "~/.config/alacritty/gruvbox-material-hard-dark.toml",
+  # "~/.config/alacritty/gruvbox-material-hard-light.toml",
+  # "~/.config/alacritty/gruvbox-hard-dark.toml",
   # "~/.config/alacritty/gruvbox-hard-light.toml",
   # "~/.config/alacritty/catppuccin-latte.toml",
   # "~/.config/alacritty/catppuccin-mocha.toml",
