feat: add github default light to alacritty

--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -14,5 +14,11 @@ Host alecu-staging
 	IdentityFile ~/.ssh/clients/alec.pem
 	IdentitiesOnly yes
 
+Host sscloud
+	HostName 54.174.247.55
+	User sunnybyte
+	IdentityFile ~/.ssh/clients/songstream.pem
+	IdentitiesOnly yes
+
 Host *
 	IdentityAgent "~/Library/Group Containers/2BUA8C4S2C.com.1password/t/agent.sock"
