feat: show memory used in GB on waybar

--- a/hyprland/.config/waybar/config.jsonc
+++ b/hyprland/.config/waybar/config.jsonc
@@ -125,7 +125,7 @@
         "tooltip": false
     },
     "memory": {
-        "format": "{}% "
+        "format": "{used:0.1f}G "
     },
     "temperature": {
         // "thermal-zone": 2,
