feat: add hyprshade, set monitor config to the right refresh rate, update config to be compat with latest hyprland

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -15,6 +15,7 @@
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
+monitor=HDMI-A-1,2560x1440@100,auto,auto
 monitor=,preferred,auto,auto
 
 
@@ -38,6 +39,7 @@ $powerMenu = wofi_power
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # Or execute your favorite apps at launch like this:
 
+exec-once = uwsm app -- hyprshade auto
 exec-once = uwsm app -- nm-applet
 exec-once = uwsm app -- blueman-applet
 exec-once = uwsm app -- 1password --ozone-platform-hint=auto --silent
@@ -220,7 +222,7 @@ input {
 
 # https://wiki.hyprland.org/Configuring/Variables/#gestures
 gestures {
-    workspace_swipe = false
+    gesture = 3, horizontal, workspace
 }
 
 # Example per-device config
