feat: add some new ssh hosts

--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -1,5 +1,12 @@
+ServerAliveInterval 60
+ServerAliveCountMax 120
+
 Host wa
 	Hostname webdev-sunnybyte.wildlifeacoustics.com
+	User sunnybyte
+
+Host wa2
+	Hostname webdev2-master.wildlifeacoustics.com
 	User sunnybyte
 
 Host alecu-prod
@@ -13,11 +20,23 @@ Host alecu-staging
 	User ubuntu
 	IdentityFile ~/.ssh/clients/alec.pem
 	IdentitiesOnly yes
+	
+Host alecu-staging2
+	HostName 3.150.180.219
+	User ubuntu
+	IdentityFile ~/.ssh/clients/alec.pem
+	IdentitiesOnly yes
 
 Host sscloud
 	HostName 54.174.247.55
 	User sunnybyte
 	IdentityFile ~/.ssh/clients/songstream.pem
+	IdentitiesOnly yes
+
+Host mcasd
+	HostName 147.28.229.228
+	User av09784
+	IdentityFile ~/.ssh/clients/mcasd.pem
 	IdentitiesOnly yes
 
 Host *
