fix: add server to ssh

--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -39,5 +39,11 @@ Host mcasd
 	IdentityFile ~/.ssh/clients/mcasd.pem
 	IdentitiesOnly yes
 
+Host mcasd2
+	HostName 66.220.24.206
+	User avclient01
+	IdentityFile ~/.ssh/clients/mcasd.pem
+	IdentitiesOnly yes
+
 Host *
 	IdentityAgent "~/Library/Group Containers/2BUA8C4S2C.com.1password/t/agent.sock"
