fix: switch to 4k monitor

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -15,7 +15,8 @@
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=HDMI-A-1,2560x1440@100,auto,auto
+#monitor=HDMI-A-1,2560x1440@100,auto,auto
+monitor=,preferred,auto,auto
 monitor=,preferred,auto,auto
 
 
@@ -39,10 +40,10 @@ $powerMenu = wofi_power
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # Or execute your favorite apps at launch like this:
 
-exec-once = uwsm app -- hyprshade auto
-exec-once = uwsm app -- nm-applet
-exec-once = uwsm app -- blueman-applet
-exec-once = uwsm app -- 1password --ozone-platform-hint=auto --silent
+exec = uwsm app -- hyprshade auto
+exec = uwsm app -- nm-applet
+exec = uwsm app -- blueman-applet
+exec = uwsm app -- 1password --ozone-platform-hint=auto --silent
 
 # redshift-gtk started using systemctl --user enable --now redshift.service
 # exec-once = uwsm app -- redshift-gtk
