--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -127,26 +127,26 @@ run '~/.tmux/plugins/tpm/tpm'
 # setw -g window-status-format "#[default][#I #F #W] "
 # setw -g window-status-current-format "#[fg=#f38ba8,bold][#I #F #W] "
 
-# Gruvbox colors for Tmux
-set -g mode-style "fg=#83a598,bg=#ebdbb2"
-set -g message-style "fg=#83a598,bg=#ebdbb2"
-set -g message-command-style "fg=#83a598,bg=#ebdbb2"
-set -g pane-border-style "fg=#ebdbb2"
-set -g pane-active-border-style "fg=#cc241d"
-set -g status "on"
-set -g status-justify "left"
-set -g status-style "fg=#a89984"
-set -g status-left-length "100"
-set -g status-right-length "100"
-set -g status-left-style NONE
-set -g status-right-style NONE
-set -g status-left "#[fg=#a89984,nobold] #S "
-set -g status-right "#[fg=#131a24,nobold,nounderscore,noitalics]#[fg=#a89984] #{prefix_highlight} #[fg=#a89984,nobold,nounderscore,noitalics] #[fg=#a89984] %Y-%m-%d %I:%M %p "
-setw -g window-status-activity-style "underscore,fg=#83a598"
-setw -g window-status-separator ""
-setw -g window-status-style "NONE,fg=#a89984"
-setw -g window-status-format "#[default][#I #F #W] "
-setw -g window-status-current-format "#[fg=#ea6962][#I #F #W] "
+# # Gruvbox colors for Tmux
+# set -g mode-style "fg=#83a598,bg=#ebdbb2"
+# set -g message-style "fg=#83a598,bg=#ebdbb2"
+# set -g message-command-style "fg=#83a598,bg=#ebdbb2"
+# set -g pane-border-style "fg=#ebdbb2"
+# set -g pane-active-border-style "fg=#cc241d"
+# set -g status "on"
+# set -g status-justify "left"
+# set -g status-style "fg=#a89984"
+# set -g status-left-length "100"
+# set -g status-right-length "100"
+# set -g status-left-style NONE
+# set -g status-right-style NONE
+# set -g status-left "#[fg=#a89984,nobold] #S "
+# set -g status-right "#[fg=#131a24,nobold,nounderscore,noitalics]#[fg=#a89984] #{prefix_highlight} #[fg=#a89984,nobold,nounderscore,noitalics] #[fg=#a89984] %Y-%m-%d %I:%M %p "
+# setw -g window-status-activity-style "underscore,fg=#83a598"
+# setw -g window-status-separator ""
+# setw -g window-status-style "NONE,fg=#a89984"
+# setw -g window-status-format "#[default][#I #F #W] "
+# setw -g window-status-current-format "#[fg=#ea6962][#I #F #W] "
 
 # # Kanagawa colors for Tmux
 # set -g mode-style "fg=#6a9589,bg=#c0a36e"
@@ -285,3 +285,78 @@ setw -g window-status-current-format "#[fg=#ea6962][#I #F #W] "
 # set-option -g window-status-activity-style none
 # set -g pane-border-style "fg=#7c8f8f"
 # set -g pane-active-border-style "fg=#ff5874"
+
+# TokyoNight colors for Tmux
+
+set -g mode-style "fg=#82aaff,bg=#3b4261"
+
+set -g message-style "fg=#82aaff,bg=#3b4261"
+set -g message-command-style "fg=#82aaff,bg=#3b4261"
+
+set -g pane-border-style "fg=#3b4261"
+set -g pane-active-border-style "fg=#82aaff"
+
+set -g status "on"
+set -g status-justify "left"
+
+set -g status-style "fg=#82aaff,bg=#1e2030"
+
+set -g status-left-length "100"
+set -g status-right-length "100"
+
+set -g status-left-style NONE
+set -g status-right-style NONE
+
+set -g status-left "#[fg=#1b1d2b,bg=#82aaff,bold] #S #[fg=#82aaff,bg=#1e2030,nobold,nounderscore,noitalics]"
+set -g status-right "#[fg=#1e2030,bg=#1e2030,nobold,nounderscore,noitalics]#[fg=#82aaff,bg=#1e2030] #{prefix_highlight} #[fg=#3b4261,bg=#1e2030,nobold,nounderscore,noitalics]#[fg=#82aaff,bg=#3b4261] %Y-%m-%d  %I:%M %p #[fg=#82aaff,bg=#3b4261,nobold,nounderscore,noitalics]#[fg=#1b1d2b,bg=#82aaff,bold] #h "
+if-shell '[ "$(tmux show-option -gqv "clock-mode-style")" == "24" ]' {
+  set -g status-right "#[fg=#1e2030,bg=#1e2030,nobold,nounderscore,noitalics]#[fg=#82aaff,bg=#1e2030] #{prefix_highlight} #[fg=#3b4261,bg=#1e2030,nobold,nounderscore,noitalics]#[fg=#82aaff,bg=#3b4261] %Y-%m-%d  %H:%M #[fg=#82aaff,bg=#3b4261,nobold,nounderscore,noitalics]#[fg=#1b1d2b,bg=#82aaff,bold] #h "
+}
+
+setw -g window-status-activity-style "underscore,fg=#828bb8,bg=#1e2030"
+setw -g window-status-separator ""
+setw -g window-status-style "NONE,fg=#828bb8,bg=#1e2030"
+setw -g window-status-format "#[fg=#1e2030,bg=#1e2030,nobold,nounderscore,noitalics]#[default] #I  #W #F #[fg=#1e2030,bg=#1e2030,nobold,nounderscore,noitalics]"
+setw -g window-status-current-format "#[fg=#1e2030,bg=#3b4261,nobold,nounderscore,noitalics]#[fg=#82aaff,bg=#3b4261,bold] #I  #W #F #[fg=#3b4261,bg=#1e2030,nobold,nounderscore,noitalics]"
+
+# tmux-plugins/tmux-prefix-highlight support
+set -g @prefix_highlight_output_prefix "#[fg=#ffc777]#[bg=#1e2030]#[fg=#1e2030]#[bg=#ffc777]"
+set -g @prefix_highlight_output_suffix ""
+
+
+# # TokyoNight day colors for Tmux
+#
+# set -g mode-style "fg=#2e7de9,bg=#a8aecb"
+#
+# set -g message-style "fg=#2e7de9,bg=#a8aecb"
+# set -g message-command-style "fg=#2e7de9,bg=#a8aecb"
+#
+# set -g pane-border-style "fg=#a8aecb"
+# set -g pane-active-border-style "fg=#2e7de9"
+#
+# set -g status "on"
+# set -g status-justify "left"
+#
+# set -g status-style "fg=#2e7de9,bg=#d0d5e3"
+#
+# set -g status-left-length "100"
+# set -g status-right-length "100"
+#
+# set -g status-left-style NONE
+# set -g status-right-style NONE
+#
+# set -g status-left "#[fg=#b4b5b9,bg=#2e7de9,bold] #S #[fg=#2e7de9,bg=#d0d5e3,nobold,nounderscore,noitalics]"
+# set -g status-right "#[fg=#d0d5e3,bg=#d0d5e3,nobold,nounderscore,noitalics]#[fg=#2e7de9,bg=#d0d5e3] #{prefix_highlight} #[fg=#a8aecb,bg=#d0d5e3,nobold,nounderscore,noitalics]#[fg=#2e7de9,bg=#a8aecb] %Y-%m-%d  %I:%M %p #[fg=#2e7de9,bg=#a8aecb,nobold,nounderscore,noitalics]#[fg=#b4b5b9,bg=#2e7de9,bold] #h "
+# if-shell '[ "$(tmux show-option -gqv "clock-mode-style")" == "24" ]' {
+#   set -g status-right "#[fg=#d0d5e3,bg=#d0d5e3,nobold,nounderscore,noitalics]#[fg=#2e7de9,bg=#d0d5e3] #{prefix_highlight} #[fg=#a8aecb,bg=#d0d5e3,nobold,nounderscore,noitalics]#[fg=#2e7de9,bg=#a8aecb] %Y-%m-%d  %H:%M #[fg=#2e7de9,bg=#a8aecb,nobold,nounderscore,noitalics]#[fg=#b4b5b9,bg=#2e7de9,bold] #h "
+# }
+#
+# setw -g window-status-activity-style "underscore,fg=#6172b0,bg=#d0d5e3"
+# setw -g window-status-separator ""
+# setw -g window-status-style "NONE,fg=#6172b0,bg=#d0d5e3"
+# setw -g window-status-format "#[fg=#d0d5e3,bg=#d0d5e3,nobold,nounderscore,noitalics]#[default] #I  #W #F #[fg=#d0d5e3,bg=#d0d5e3,nobold,nounderscore,noitalics]"
+# setw -g window-status-current-format "#[fg=#d0d5e3,bg=#a8aecb,nobold,nounderscore,noitalics]#[fg=#2e7de9,bg=#a8aecb,bold] #I  #W #F #[fg=#a8aecb,bg=#d0d5e3,nobold,nounderscore,noitalics]"
+#
+# # tmux-plugins/tmux-prefix-highlight support
+# set -g @prefix_highlight_output_prefix "#[fg=#8c6c3e]#[bg=#d0d5e3]#[fg=#d0d5e3]#[bg=#8c6c3e]"
+# set -g @prefix_highlight_output_suffix ""
